--- a/pixi.toml
+++ b/pixi.toml
@@ -1,20 +1,6 @@
-[project]
-name = "fastMatMR"
+[package]
+name = "yourpkg"
 version = "0.1.0"
-description = "Add a short description here"
-authors = ["Rohit Goswami <rog32@hi.is>"]
-channels = ["conda-forge", "bioconda"]
-platforms = ["linux-64"]
 
-[tasks]
-
-[dependencies]
-r-renv = "1.0.2.*"
-compilers = "1.6.0.*"
-radian = "0.6.7.*"
-ipython = "8.14.0.*"
-fast_matrix_market = "1.7.4.*"
-numpy = "1.25.2.*"
-scipy = "1.11.2.*"
-towncrier = "23.6.0.*"
-tbump = "6.9.0.*"
+[package.build]
+script = ["R CMD INSTALL ."]
